--- a/projects/index.html
+++ b/projects/index.html
@@ -38,10 +38,10 @@ Projects -
 <meta name="twitter:image" content="https://chongniki.github.io/tn.png"/>
 
 <meta name="twitter:title" content="Projects"/>
-<meta name="twitter:description" content="Fitbit Analysis Topic Modelling of Tweets Web Scraping with Selenium  Hello test  "/>
+<meta name="twitter:description" content="Fitbit Analysis Topic Modelling of Tweets Web Scraping with Selenium "/>
 
 <meta property="og:title" content="Projects" />
-<meta property="og:description" content="Fitbit Analysis Topic Modelling of Tweets Web Scraping with Selenium  Hello test  " />
+<meta property="og:description" content="Fitbit Analysis Topic Modelling of Tweets Web Scraping with Selenium " />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://chongniki.github.io/projects/" />
 
@@ -71,8 +71,6 @@ Projects -
 <h3>Topic Modelling of Tweets</h3>
 
 <h3>Web Scraping with Selenium</h3>
-
-<h3> Hello test </h3>
 </div>
 
         
